--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <meta property="og:description" content="Faure Chomón se incorporó a la lucha contra Batista el mismo 10 de marzo de 1952. Fue un incansable organizador de los combatientes del Directorio Revolucionario en las calles de La Habana y como Jefe de Acción de esa Organización estuvo al frente de las acciones armadas que realizó el Directorio en la capital. Fue uno de los principales organizadores del asalto al Palacio Presidencial el 13 de marzo de 1957 y segundo al mando del comando de asalto a esa fortaleza militar. En los momentos iniciales del encarnizado combate fue herido de bala en dos partes de su cuerpo cuando pretendía traspasar la verja de entrada a Palacio, pero sobrevivió y logró salvar la vida con la ayuda de uno de aquellos heroicos combatientes.">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="https://faurechomon.nicepage.io/Home.html?version=d2adf461-a3eb-4017-a8a7-2b8bd8786021" data-home-page-title="Home" class="u-body"> 
+  <body data-home-page="https://faurechomon.nicepage.io/Home.html?version=814c120d-914e-4243-b6bc-47e46450c3a0" data-home-page-title="Home" class="u-body"> 
     <section class="u-align-left u-clearfix u-image u-section-1" id="sec-d64f" data-image-width="1125" data-image-height="750">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-text u-text-white u-text-1">Faure Chomon Mediavilla</h2>
-        <h3 class="u-text u-text-body-alt-color u-text-2">biografia</h3>
+        <h3 class="u-text u-text-body-alt-color u-text-2"> Historia de vida</h3>
         <p class="u-text u-text-white u-text-3"> Faure Chomón se incorporó a
 la lucha contra Batista el mismo 10 de marzo de 1952. Fue un incansable
 organizador de los combatientes del Directorio Revolucionario en las calles de
