--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html style="font-size: 16px;" lang="es">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Jeff Morgan">
+    <meta name="keywords" content="Ramon Perez">
     <meta name="description" content="Faure Chomón se incorporó a la lucha contra Batista el mismo 10 de marzo de 1952. Fue un incansable organizador de los combatientes del Directorio Revolucionario en las calles de La Habana y como Jefe de Acción de esa Organización estuvo al frente de las acciones armadas que realizó el Directorio en la capital. Fue uno de los principales organizadores del asalto al Palacio Presidencial el 13 de marzo de 1957 y segundo al mando del comando de asalto a esa fortaleza militar. En los momentos iniciales del encarnizado combate fue herido de bala en dos partes de su cuerpo cuando pretendía traspasar la verja de entrada a Palacio, pero sobrevivió y logró salvar la vida con la ayuda de uno de aquellos heroicos combatientes.">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Home</title>
+    <title>faure chomon</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery-1.9.1.min.js" defer=""></script>
@@ -28,7 +28,7 @@
     <meta property="og:description" content="Faure Chomón se incorporó a la lucha contra Batista el mismo 10 de marzo de 1952. Fue un incansable organizador de los combatientes del Directorio Revolucionario en las calles de La Habana y como Jefe de Acción de esa Organización estuvo al frente de las acciones armadas que realizó el Directorio en la capital. Fue uno de los principales organizadores del asalto al Palacio Presidencial el 13 de marzo de 1957 y segundo al mando del comando de asalto a esa fortaleza militar. En los momentos iniciales del encarnizado combate fue herido de bala en dos partes de su cuerpo cuando pretendía traspasar la verja de entrada a Palacio, pero sobrevivió y logró salvar la vida con la ayuda de uno de aquellos heroicos combatientes.">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="https://faurechomon.nicepage.io/Home.html?version=814c120d-914e-4243-b6bc-47e46450c3a0" data-home-page-title="Home" class="u-body"> 
+  <body data-home-page="https://faurechomon.com" data-home-page-title="Home" class="u-body"> 
     <section class="u-align-left u-clearfix u-image u-section-1" id="sec-d64f" data-image-width="1125" data-image-height="750">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-text u-text-white u-text-1">Faure Chomon Mediavilla</h2>
