--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Ramon Perez">
     <meta name="description" content="Faure Chomón se incorporó a la lucha contra Batista el mismo 10 de marzo de 1952. Fue un incansable organizador de los combatientes del Directorio Revolucionario en las calles de La Habana y como Jefe de Acción de esa Organización estuvo al frente de las acciones armadas que realizó el Directorio en la capital. Fue uno de los principales organizadores del asalto al Palacio Presidencial el 13 de marzo de 1957 y segundo al mando del comando de asalto a esa fortaleza militar. En los momentos iniciales del encarnizado combate fue herido de bala en dos partes de su cuerpo cuando pretendía traspasar la verja de entrada a Palacio, pero sobrevivió y logró salvar la vida con la ayuda de uno de aquellos heroicos combatientes.">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Home</title>
+    <title>Faure Chomón</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery-1.9.1.min.js" defer=""></script>
@@ -32,7 +32,7 @@
   <body data-home-page="https://faurechomon.nicepage.io/Home.html?version=3a590d19-9872-4a6a-9d46-482f7da5b1d9" data-home-page-title="Home" class="u-body"> 
     <section class="u-align-left u-clearfix u-image u-section-1" id="sec-d64f" data-image-width="1125" data-image-height="750">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-sheet-1">
-        <h2 class="u-text u-text-white u-text-1">Comandante Faure Chomón</h2>
+        <h2 class="u-text u-text-white u-text-1">Faure Chomón</h2>
         <h3 class="u-text u-text-body-alt-color u-text-2"> Historia de vida</h3>
         <p class="u-text u-text-white u-text-3"> El comandante Faure Chomón fue un destacado combatiente contra la dictadura batistiana en cada una de las etapas de la lucha que se iniciara el mismo 10 de marzo de 1952, hasta el 1º de enero de 1959 y formó parte de forma protagónica en todos los grandes acontecimientos políticos que se han desarrollado en Cuba, después del triunfo de la Revolución. En 1961 se fundaron las Organizaciones Revolucionarias Integradas (ORI), en las que confluyeron el Movimiento Revolucionario 26 de Julio, el Partido Socialista Popular y el Directorio Revolucionario 13 de Marzo, esta última Organización dirigida por el comandante Faure Chomón, quien formó parte del Secretariado de las ORI. <br>
           <br>El comandante Faure Chomón fue miembro del Comité Central y del Secretariado del Partido Unido de la Revolución Socialista (PURS) desde su fundación hasta la constitución del Partido Comunista de Cuba (PCC) en 1965, del que también era miembro de su Comité Central. Desde la fundación del PCC fue delegado a todos los congresos del Partido. Era Diputado a la Asamblea Nacional del Poder Popular desde su fundación en 1976 hasta el día 5 de diciembre de 2019, día de su partida física. Fue el primer embajador del gobierno revolucionario cubano en la antigua Unión Soviética, después en Viet Nam y más tarde en Ecuador. Se desempeñó como ministro en los ministerios de Comunicaciones y de Transporte y durante diez años como primer secretario del Comité Provincial del PCC en la provincia de Las Tunas&nbsp;<br>
