--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
                 "name": "faurechomon"
         }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Home">
+    <meta property="og:title" content="Faure Chomón">
     <meta property="og:description" content="Faure Chomón se incorporó a la lucha contra Batista el mismo 10 de marzo de 1952. Fue un incansable organizador de los combatientes del Directorio Revolucionario en las calles de La Habana y como Jefe de Acción de esa Organización estuvo al frente de las acciones armadas que realizó el Directorio en la capital. Fue uno de los principales organizadores del asalto al Palacio Presidencial el 13 de marzo de 1957 y segundo al mando del comando de asalto a esa fortaleza militar. En los momentos iniciales del encarnizado combate fue herido de bala en dos partes de su cuerpo cuando pretendía traspasar la verja de entrada a Palacio, pero sobrevivió y logró salvar la vida con la ayuda de uno de aquellos heroicos combatientes.">
     <meta property="og:type" content="website">
 
