--- a/en/index.html
+++ b/en/index.html
@@ -23,7 +23,7 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
                 "name": "faurechomon"
         }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Home">
+    <meta property="og:title" content="Faure Chomon">
     <meta property="og:description" content="Faure Chomón joined the fight against Batista on March 10, 1952. He was a tireless organizer of the fighters of the Revolutionary Directorate in the streets of Havana and as Head of Action of that Organization he was at the forefront of the armed actions that he carried out. the Directory in the capital. He was one of the main organizers of the assault on the Presidential Palace on March 13, 1957 and second in command of the assault command on that military fortress. In the initial moments of the fierce combat, he was shot in two parts of his body when he tried to cross the entrance gate to the Palace, but he survived and managed to save his life with the help of one of those heroic combatants.">
     <meta property="og:type" content="website">
 
