--- a/en/index.html
+++ b/en/index.html
@@ -42,7 +42,7 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
         <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-sheet-1">
             <div>
                 <span style="float: right; vertical-align: middle;">
-                    <a href="../index.html" style="color:white">Spanish</a>
+                    <a href="../index.html?ln=es" style="color:white">Spanish</a>
                 </span>
             </div>
             <h2 class="u-text u-text-white u-text-1">Faure Chomón</h2>
