--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
             <div class="u-container-style u-group u-group-1">
                 <div class="u-container-layout">
                     <a href="#" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">version impresa</a>
-                    <a href="#" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">Version ebook</a>
+                    <a href="https://www.amazon.es/dp/B09N3YGK3X" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">Ebook formato Kindle de Amazon</a>
                 </div>
             </div>
         </div>
