--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
     <section class="u-align-left u-clearfix u-image u-shading u-typography-custom-page-typography-8--Introduction u-white u-section-2" src="" id="sec-9ec3">
         <div class="u-clearfix u-sheet u-sheet-1">
             <h1 class="u-text u-text-default u-text-white u-text-1">
-                Comprar&nbsp;Libro <span style="font-size: 1.5rem;">(proximamente...)</span>
+                Comprar&nbsp;Libro <span style="font-size: 1.5rem;"></span>
             </h1>
             <div class="u-border-4 u-border-palette-3-base u-line u-line-horizontal u-line-1"></div>
             <div class="u-container-style u-group u-group-1">
                 <div class="u-container-layout">
-                    <a href="#" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">version impresa</a>
-                    <a href="https://www.amazon.es/dp/B09N3YGK3X" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">Ebook formato Kindle de Amazon</a>
+                    <a href="#" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">version impresa (proximamente...)</a>
+                    <a href="https://www.amazon.es/dp/B09NMQMLB2" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">Ebook formato Kindle de Amazon</a>
                 </div>
             </div>
         </div>
