--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
             <div class="u-border-4 u-border-palette-3-base u-line u-line-horizontal u-line-1"></div>
             <div class="u-container-style u-group u-group-1">
                 <div class="u-container-layout">
-                    <a href="#" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">version impresa (proximamente...)</a>
-                    <a href="https://www.amazon.es/dp/B09NMQMLB2" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">Ebook formato Kindle de Amazon</a>
+                    <a href="https://www.amazon.es/dp/B09NGVLNG8" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">Version impresa Tapa blanda (Amazon)</a>
+                    <a href="https://www.amazon.es/dp/B09NMQMLB2" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">eBook Kindle (Amazon)
+                    </a>
                 </div>
             </div>
         </div>
