--- a/index.html
+++ b/index.html
@@ -77,21 +77,29 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
             <h1 class="u-text u-text-default u-text-white u-text-1">
                 Comprar&nbsp;Libro <span style="font-size: 1.5rem;"></span>
             </h1>
-            <div class="u-border-4 u-border-palette-3-base u-line u-line-horizontal u-line-1"></div>
+            <div>
+                <h3 id="t2" class="u-text u-text-body-alt-color u-text-2">Version impresa Tapa blanda (Amazon)</h3>
+                <a href="https://www.amazon.com/dp/B09NGVLNG8" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">US</a>
+                <a href="https://www.amazon.es/dp/B09NGVLNG8" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">ES</a>
+            </div>
+            <div>
+                <h3 id="t2" class="u-text u-text-body-alt-color u-text-2">eBook Kindle (Amazon)</h3>
+                <a href="https://www.amazon.com/dp/B09NMQMLB2" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">US</a>
+                <a href="https://www.amazon.es/dp/B09NMQMLB2" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">ES</a>
+            </div>
+
+            <!--<div class="u-border-4 u-border-palette-3-base u-line u-line-horizontal u-line-1"></div>
             <div class="u-container-style u-group u-group-1">
                 <div class="u-container-layout">
                     <h2 class="u-text u-text-default u-text-white u-text-1">
                         Version impresa Tapa blanda (Amazon) <span style="font-size: 1.0rem;"></span>
                     </h2>
-                    <a href="https://www.amazon.com/dp/B09NGVLNG8" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">US</a>
-                    <a href="https://www.amazon.es/dp/B09NGVLNG8" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">ES</a>
+
                     <h2 class="u-text u-text-default u-text-white u-text-1">
-                        eBook Kindle (Amazon) <span style="font-size: 1.0rem;"></span>
+                         <span style="font-size: 1.0rem;"></span>
                     </h2>
-                    <a href="https://www.amazon.com/dp/B09NMQMLB2" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">US</a>
-                    <a href="https://www.amazon.es/dp/B09NMQMLB2" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">ES</a>
                 </div>
-            </div>
+            </div>-->
         </div>
     </section>
     <section class="u-align-center u-clearfix u-grey-80 u-section-3" id="carousel_e3ee">
