--- a/index.html
+++ b/index.html
@@ -79,14 +79,15 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
             </h1>
             <div class="u-border-4 u-border-palette-3-base u-line u-line-horizontal u-line-1"></div>
             <div>
-                <h3 id="t2" class="u-text u-text-body-alt-color u-text-2">Version impresa Tapa blanda (Amazon)</h3>
-                <a href="https://www.amazon.com/dp/B09NGVLNG8" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">US</a>
-                <a href="https://www.amazon.es/dp/B09NGVLNG8" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">ES</a>
+                <h3 id="t2" class="u-text u-text-body-alt-color u-text-2">Version impresa Tapa blanda</h3>
+                <a href="https://www.amazon.com/dp/B09NGVLNG8" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">Amazon en US</a>
+                <a href="https://www.amazon.es/dp/B09NGVLNG8" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">Amazon en ES</a>
             </div>
+            <br /><br />
             <div>
                 <h3 id="t2" class="u-text u-text-body-alt-color u-text-2">eBook Kindle (Amazon)</h3>
-                <a href="https://www.amazon.com/dp/B09NMQMLB2" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">US</a>
-                <a href="https://www.amazon.es/dp/B09NMQMLB2" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">ES</a>
+                <a href="https://www.amazon.com/dp/B09NMQMLB2" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">Amazon en US</a>
+                <a href="https://www.amazon.es/dp/B09NMQMLB2" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">Amazon en ES</a>
             </div>
 
             <!--<div class="u-border-4 u-border-palette-3-base u-line u-line-horizontal u-line-1"></div>
