--- a/index.html
+++ b/index.html
@@ -80,8 +80,16 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
             <div class="u-border-4 u-border-palette-3-base u-line u-line-horizontal u-line-1"></div>
             <div>
                 <h3 id="t2" class="u-text u-text-body-alt-color u-text-2">Version impresa Tapa blanda</h3>
-                <a href="https://www.amazon.com/dp/B09NGVLNG8" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">Amazon en US</a><br />
-                <a href="https://www.amazon.es/dp/B09NGVLNG8" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">Amazon en ES</a>
+                <table>
+                    <tr>
+                        <td>
+                            <a href="https://www.amazon.com/dp/B09NGVLNG8" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">Amazon en US</a>
+                        </td>
+                        <td>
+                            <a href="https://www.amazon.es/dp/B09NGVLNG8" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">Amazon en ES</a>
+                        </td>
+                    </tr>
+                </table>
             </div>
             <br />
             <div>
