--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
     <section class="u-align-left u-clearfix u-image u-shading u-typography-custom-page-typography-8--Introduction u-white u-section-2" src="" id="sec-9ec3">
         <div class="u-clearfix u-sheet u-sheet-1">
             <h1 class="u-text u-text-default u-text-white u-text-1">
-                Comprar&nbsp;Libro <span style="font-size: 1.5rem;"></span>
+                Comprar&nbsp;Libro&nbsp;Comandante Faure Chomón <span style="font-size: 1.5rem;"></span>
             </h1>
             <div class="u-border-4 u-border-palette-3-base u-line u-line-horizontal u-line-1"></div>
             <div>
@@ -83,19 +83,27 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
                 <table>
                     <tr>
                         <td>
-                            <a href="https://www.amazon.com/dp/B09NGVLNG8" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">Amazon en US</a>
+                            <a href="https://www.amazon.com/dp/B09NGVLNG8" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">Amazon US</a>
                         </td>
                         <td>
-                            <a href="https://www.amazon.es/dp/B09NGVLNG8" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">Amazon en ES</a>
+                            <a href="https://www.amazon.es/dp/B09NGVLNG8" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">Amazon ES</a>
                         </td>
                     </tr>
                 </table>
             </div>
             <br />
+            <h3 id="t2" class="u-text u-text-body-alt-color u-text-2">eBook Kindle (Amazon)</h3>
             <div>
-                <h3 id="t2" class="u-text u-text-body-alt-color u-text-2">eBook Kindle (Amazon)</h3>
-                <a href="https://www.amazon.com/dp/B09NMQMLB2" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">Amazon en US</a>
-                <a href="https://www.amazon.es/dp/B09NMQMLB2" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">Amazon en ES</a>
+                <tr>
+                    <td>
+                        <a href="https://www.amazon.com/dp/B09NMQMLB2" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">Amazon US</a>
+                    </td>
+                    <td>
+                        <a href="https://www.amazon.es/dp/B09NMQMLB2" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">Amazon ES</a>
+                    </td>
+                </tr>
+                
+                
             </div>
             <br />
             <!--<div class="u-border-4 u-border-palette-3-base u-line u-line-horizontal u-line-1"></div>
