--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
                 </table>
             </div>
             <br />
-            <h3 id="t2" class="u-text u-text-body-alt-color u-text-2">eBook Kindle (Amazon)</h3>
+            <h3 id="t2" class="u-text u-text-body-alt-color u-text-2">eBook Kindle</h3>
             <div>
                 <tr>
                     <td>
