--- a/index.html
+++ b/index.html
@@ -94,16 +94,17 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
             <br />
             <h3 id="t2" class="u-text u-text-body-alt-color u-text-2">Version eBook Kindle</h3>
             <div>
-                <tr>
-                    <td>
-                        <a href="https://www.amazon.com/dp/B09NMQMLB2" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">Amazon US</a>
-                    </td>
-                    <td>
-                        <a href="https://www.amazon.es/dp/B09NMQMLB2" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">Amazon ES</a>
-                    </td>
-                </tr>
-                
-                
+                <table>
+                    <tr>
+                        <td>
+                            <a href="https://www.amazon.com/dp/B09NMQMLB2" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">Amazon US</a>
+                        </td>
+                        <td>
+                            <a href="https://www.amazon.es/dp/B09NMQMLB2" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">Amazon ES</a>
+                        </td>
+                    </tr>
+                </table>
+
             </div>
             <br />
             <!--<div class="u-border-4 u-border-palette-3-base u-line u-line-horizontal u-line-1"></div>
