--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
     <section class="u-align-left u-clearfix u-image u-shading u-typography-custom-page-typography-8--Introduction u-white u-section-2" src="" id="sec-9ec3">
         <div class="u-clearfix u-sheet u-sheet-1">
             <h1 class="u-text u-text-default u-text-white u-text-1">
-                Comprar&nbsp;Libro&nbsp;Comandante Faure Chomón <span style="font-size: 1.5rem;"></span>
+                Comprar&nbsp;Libro&nbsp;"Comandante Faure Chomón" <span style="font-size: 1.5rem;"></span>
             </h1>
             <div class="u-border-4 u-border-palette-3-base u-line u-line-horizontal u-line-1"></div>
             <div>
