--- a/index.html
+++ b/index.html
@@ -75,32 +75,53 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
     <section class="u-align-left u-clearfix u-image u-shading u-typography-custom-page-typography-8--Introduction u-white u-section-2" src="" id="sec-9ec3">
         <div class="u-clearfix u-sheet u-sheet-1">
             <h1 class="u-text u-text-default u-text-white u-text-1">
-                Comprar&nbsp;Libro&nbsp;"Comandante Faure Chomón" <span style="font-size: 1.5rem;"></span>
+                Libro:&nbsp;"Comandante Faure Chomón" <span style="font-size: 1.5rem;"></span>
             </h1>
             <div class="u-border-4 u-border-palette-3-base u-line u-line-horizontal u-line-1"></div>
             <div>
-                <h3 id="t2" class="u-text u-text-body-alt-color u-text-2">Version impresa Tapa blanda</h3>
+                <h3 id="t2" class="u-text u-text-body-alt-color u-text-2">Comprar Version impresa Tapa blanda (Amazon)</h3>
                 <table>
                     <tr>
                         <td>
-                            <a href="https://www.amazon.com/dp/B09NGVLNG8" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">Amazon US</a>
+                            <a href="https://www.amazon.com/dp/B09NGVLNG8" title="Tienda Amazon desde Estados Unidos" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">US</a>
                         </td>
                         <td>
-                            <a href="https://www.amazon.es/dp/B09NGVLNG8" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">Amazon ES</a>
+                            <a href="https://www.amazon.es/dp/B09NGVLNG8" title="Tienda Amazon desde España" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">ES</a>
+                        </td>
+                        <td>
+                            <a href="https://www.amazon.uk/dp/B09NGVLNG8" title="Tienda Amazon desde Inglaterra" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">UK</a>
+                        </td>
+                        <td>
+                            <a href="https://www.amazon.de/dp/B09NGVLNG8" title="Tienda Amazon desde Alemania" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">DE</a>
+                        </td>
+                        <td>
+                            <a href="https://www.amazon.fr/dp/B09NGVLNG8" title="Tienda Amazon desde Francia" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">FR</a>
+                        </td>
+                        <td>
+                            <a href="https://www.amazon.it/dp/B09NGVLNG8" title="Tienda Amazon desde Italia" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">IT</a>
+                        </td>
+                        <td>
+                            <a href="https://www.amazon.jp/dp/B09NGVLNG8" title="Tienda Amazon desde Japon" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">JP</a>
+                        </td>
+                        <td>
+                            <a href="https://www.amazon.ca/dp/B09NGVLNG8" title="Tienda Amazon desde Canada" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">CA</a>
+                        </td>
+                        <td>
+                            <a href="https://www.amazon.au/dp/B09NGVLNG8" title="Tienda Amazon desde Australia" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">AU</a>
                         </td>
                     </tr>
                 </table>
             </div>
             <br />
-            <h3 id="t2" class="u-text u-text-body-alt-color u-text-2">Version eBook Kindle</h3>
+            <h3 id="t2" class="u-text u-text-body-alt-color u-text-2">Comprar Version eBook Kindle (Amazon)</h3>
             <div>
                 <table>
                     <tr>
                         <td>
-                            <a href="https://www.amazon.com/dp/B09NMQMLB2" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">Amazon US</a>
+                            <a href="https://www.amazon.com/dp/B09NMQMLB2" title="Tienda Amazon desde Estados Unidos" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">US</a>
                         </td>
                         <td>
-                            <a href="https://www.amazon.es/dp/B09NMQMLB2" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">Amazon ES</a>
+                            <a href="https://www.amazon.es/dp/B09NMQMLB2" title="Tienda Amazon desde España" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">ES</a>
                         </td>
                     </tr>
                 </table>
