--- a/index.html
+++ b/index.html
@@ -80,37 +80,39 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
             <div class="u-border-4 u-border-palette-3-base u-line u-line-horizontal u-line-1"></div>
             <div>
                 <h3 id="t2" class="u-text u-text-body-alt-color u-text-2">Comprar Version impresa Tapa blanda (Amazon)</h3>
-                <table>
-                    <tr>
-                        <td>
-                            <a href="https://www.amazon.com/dp/B09NGVLNG8" title="Tienda Amazon desde Estados Unidos" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">US</a>
-                        </td>
-                        <td>
-                            <a href="https://www.amazon.es/dp/B09NGVLNG8" title="Tienda Amazon desde España" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">ES</a>
-                        </td>
-                        <td>
-                            <a href="https://www.amazon.uk/dp/B09NGVLNG8" title="Tienda Amazon desde Inglaterra" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">UK</a>
-                        </td>
-                        <td>
-                            <a href="https://www.amazon.de/dp/B09NGVLNG8" title="Tienda Amazon desde Alemania" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">DE</a>
-                        </td>
-                        <td>
-                            <a href="https://www.amazon.fr/dp/B09NGVLNG8" title="Tienda Amazon desde Francia" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">FR</a>
-                        </td>
-                        <td>
-                            <a href="https://www.amazon.it/dp/B09NGVLNG8" title="Tienda Amazon desde Italia" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">IT</a>
-                        </td>
-                        <td>
-                            <a href="https://www.amazon.jp/dp/B09NGVLNG8" title="Tienda Amazon desde Japon" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">JP</a>
-                        </td>
-                        <td>
-                            <a href="https://www.amazon.ca/dp/B09NGVLNG8" title="Tienda Amazon desde Canada" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">CA</a>
-                        </td>
-                        <td>
-                            <a href="https://www.amazon.au/dp/B09NGVLNG8" title="Tienda Amazon desde Australia" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">AU</a>
-                        </td>
-                    </tr>
-                </table>
+                <div style="overflow-x:auto;">
+                    <table>
+                        <tr>
+                            <td>
+                                <a href="https://www.amazon.com/dp/B09NGVLNG8" title="Tienda Amazon desde Estados Unidos" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">US</a>
+                            </td>
+                            <td>
+                                <a href="https://www.amazon.es/dp/B09NGVLNG8" title="Tienda Amazon desde España" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">ES</a>
+                            </td>
+                            <td>
+                                <a href="https://www.amazon.uk/dp/B09NGVLNG8" title="Tienda Amazon desde Inglaterra" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">UK</a>
+                            </td>
+                            <td>
+                                <a href="https://www.amazon.de/dp/B09NGVLNG8" title="Tienda Amazon desde Alemania" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">DE</a>
+                            </td>
+                            <td>
+                                <a href="https://www.amazon.fr/dp/B09NGVLNG8" title="Tienda Amazon desde Francia" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">FR</a>
+                            </td>
+                            <td>
+                                <a href="https://www.amazon.it/dp/B09NGVLNG8" title="Tienda Amazon desde Italia" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">IT</a>
+                            </td>
+                            <td>
+                                <a href="https://www.amazon.jp/dp/B09NGVLNG8" title="Tienda Amazon desde Japon" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">JP</a>
+                            </td>
+                            <td>
+                                <a href="https://www.amazon.ca/dp/B09NGVLNG8" title="Tienda Amazon desde Canada" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">CA</a>
+                            </td>
+                            <td>
+                                <a href="https://www.amazon.au/dp/B09NGVLNG8" title="Tienda Amazon desde Australia" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">AU</a>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
             </div>
             <br />
             <h3 id="t2" class="u-text u-text-body-alt-color u-text-2">Comprar Version eBook Kindle (Amazon)</h3>
