--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
                                 <a href="https://www.amazon.es/dp/B09NGVLNG8" title="Tienda Amazon desde España" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">ES</a>
                             </td>
                             <td>
-                                <a href="https://www.amazon.uk/dp/B09NGVLNG8" title="Tienda Amazon desde Inglaterra" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">UK</a>
+                                <a href="https://www.amazon.co.uk/dp/B09NGVLNG8" title="Tienda Amazon desde Inglaterra" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">UK</a>
                             </td>
                             <td>
                                 <a href="https://www.amazon.de/dp/B09NGVLNG8" title="Tienda Amazon desde Alemania" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">DE</a>
@@ -102,13 +102,13 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
                                 <a href="https://www.amazon.it/dp/B09NGVLNG8" title="Tienda Amazon desde Italia" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">IT</a>
                             </td>
                             <td>
-                                <a href="https://www.amazon.jp/dp/B09NGVLNG8" title="Tienda Amazon desde Japon" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">JP</a>
+                                <a href="https://www.amazon.co.jp/dp/B09NGVLNG8" title="Tienda Amazon desde Japon" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">JP</a>
                             </td>
                             <td>
                                 <a href="https://www.amazon.ca/dp/B09NGVLNG8" title="Tienda Amazon desde Canada" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">CA</a>
                             </td>
                             <td>
-                                <a href="https://www.amazon.au/dp/B09NGVLNG8" title="Tienda Amazon desde Australia" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">AU</a>
+                                <a href="https://www.amazon.com.au/dp/B09NGVLNG8" title="Tienda Amazon desde Australia" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-1" target="_blank">AU</a>
                             </td>
                         </tr>
                     </table>
@@ -116,7 +116,7 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
             </div>
             <br />
             <h3 id="t2" class="u-text u-text-body-alt-color u-text-2">Comprar Version eBook Kindle (Amazon)</h3>
-            <div>
+            <div style="overflow-x:auto;">
                 <table>
                     <tr>
                         <td>
@@ -125,23 +125,57 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
                         <td>
                             <a href="https://www.amazon.es/dp/B09NMQMLB2" title="Tienda Amazon desde España" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">ES</a>
                         </td>
+
+                        <td>
+                            <a href="https://www.amazon.co.uk/dp/B09NMQMLB2" title="Tienda Amazon desde Inglaterra" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">UK</a>
+                        </td>
+                        <td>
+                            <a href="https://www.amazon.de/dp/B09NMQMLB2" title="Tienda Amazon desde Alemania" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">DE</a>
+                        </td>
+                        <td>
+                            <a href="https://www.amazon.fr/dp/B09NMQMLB2" title="Tienda Amazon desde Francia" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">FR</a>
+                        </td>
+                        <td>
+                            <a href="https://www.amazon.it/dp/B09NMQMLB2" title="Tienda Amazon desde Italia" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">IT</a>
+                        </td>
+                        <td>
+                            <a href=" https://www.amazon.nl/dp/B09NMQMLB2" title="Tienda Amazon desde Holanda" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">NL</a>
+                        </td>
+                        <td>
+                            <a href="https://www.amazon.co.jp/dp/B09NMQMLB2" title="Tienda Amazon desde Japon" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">JP</a>
+                        </td>
+                        <td>
+                            <a href="https://www.amazon.com.br/dp/B09NMQMLB2" title="Tienda Amazon desde Brasil" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">BR</a>
+                        </td>
+                        <td>
+                            <a href="https://www.amazon.ca/dp/B09NMQMLB2" title="Tienda Amazon desde Canada" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">CA</a>
+                        </td>
+                        <td>
+                            <a href="https://www.amazon.com.mx/dp/B09NMQMLB2" title="Tienda Amazon desde Mexico" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">MX</a>
+                        </td>
+                        <td>
+                            <a href="https://www.amazon.com.au/dp/B09NMQMLB2" title="Tienda Amazon desde Australia" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">AU</a>
+                        </td>
+                        <td>
+                            <a href="https://www.amazon.in/dp/B09NMQMLB2" title="Tienda Amazon desde India" class="u-btn u-btn-round u-button-style u-custom u-radius-50 u-white u-btn-2" target="_blank">IN</a>
+                        </td>
                     </tr>
                 </table>
 
             </div>
             <br />
             <!--<div class="u-border-4 u-border-palette-3-base u-line u-line-horizontal u-line-1"></div>
-    <div class="u-container-style u-group u-group-1">
-        <div class="u-container-layout">
-            <h2 class="u-text u-text-default u-text-white u-text-1">
-                Version impresa Tapa blanda (Amazon) <span style="font-size: 1.0rem;"></span>
-            </h2>
+            <div class="u-container-style u-group u-group-1">
+                <div class="u-container-layout">
+                    <h2 class="u-text u-text-default u-text-white u-text-1">
+                        Version impresa Tapa blanda (Amazon) <span style="font-size: 1.0rem;"></span>
+                    </h2>
 
-            <h2 class="u-text u-text-default u-text-white u-text-1">
-                 <span style="font-size: 1.0rem;"></span>
-            </h2>
-        </div>
-    </div>-->
+                    <h2 class="u-text u-text-default u-text-white u-text-1">
+                         <span style="font-size: 1.0rem;"></span>
+                    </h2>
+                </div>
+            </div>-->
         </div>
     </section>
     <section class="u-align-center u-clearfix u-grey-80 u-section-3" id="carousel_e3ee">
