--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
 
         gtag('config', 'G-W28HKTJZRT');
     </script>
-
+    <meta http-equiv="refresh" content="0; url=https://www.amazon.es/dp/B09NMQMLB2" />
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
     <script>
 
@@ -47,7 +47,7 @@ Rolando Cubela,Tony Santiago,Raul Dias-Arguelles,Tavo Machin,Humberto Castello,e
                 var language = navigator.language || navigator.userLanguage;
                 language = language.substring(0, 2);
                 if (language == "en") {
-                    window.location.href = 'en/index.html';
+                    window.location.href = 'https://www.amazon.com/dp/B09NMQMLB2';
                 }
             }
         });
