--- a/en/index.html
+++ b/en/index.html
@@ -17,7 +17,8 @@ Rolando Cubela, Tony Santiago, Raul Dias-Arguelles, Tavo Machin, Humberto Castel
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i">
 
-    <script type="application/ld+json">        {
+    <script type="application/ld+json">
+        {
                 "@context": "http://schema.org",
                 "@type": "Organization",
                 "name": "faurechomon"
@@ -26,6 +27,8 @@ Rolando Cubela, Tony Santiago, Raul Dias-Arguelles, Tavo Machin, Humberto Castel
     <meta property="og:title" content="Faure Chomon">
     <meta property="og:description" content="Faure Chomón joined the fight against Batista on March 10, 1952. He was a tireless organizer of the fighters of the Revolutionary Directorate in the streets of Havana and as Head of Action of that Organization he was at the forefront of the armed actions that he carried out. the Directory in the capital. He was one of the main organizers of the assault on the Presidential Palace on March 13, 1957 and second in command of the assault command on that military fortress. In the initial moments of the fierce combat, he was shot in two parts of his body when he tried to cross the entrance gate to the Palace, but he survived and managed to save his life with the help of one of those heroic combatants.">
     <meta property="og:type" content="website">
+    
+    <meta http-equiv="refresh" content="0; url=https://www.amazon.es/dp/B09NMQMLB2" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-W28HKTJZRT"></script>
